--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -107,8 +107,7 @@
             android:usesCleartextTraffic="true"
             android:defaultToDeviceProtectedStorage="true"
             android:directBootAware="true"
-            android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
-            android:persistent="true">
+            android:appComponentFactory="android.support.v4.app.CoreComponentFactory">
 
         <uses-library android:name="org.apache.http.legacy" />
         <!-- Settings -->
@@ -3361,16 +3360,6 @@
         <service android:name=".fuelgauge.batterytip.AnomalyDetectionJobService"
                  android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <service android:enabled="true"
-          	     android:name=".AudioEnhancerService">
-        </service>
-
-        <receiver android:name=".cyanogenmod.DiracBootReceiver" android:enabled="true">
-            <intent-filter android:priority="2147483647">
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
-        
         <!-- This is the longest AndroidManifest.xml ever. -->
 
         <!-- Start of our manifest entries -->
